feat: membaut index untuk telemetry serta fitur paginasi untuk telemetry
